--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.0.1"
   },
   "scripts": {
